# pythonProject_coursework_1

./: README.md  pyproject.toml  requirements.txt  user_settings.json
data/: report.json
src/: reports.py  services.py  utils.py  views.py
tests/: conftest.py  test_reports.py  test_services.py  test_utils.py
